--- a/arch/arm64/configs/h3_defconfig
+++ b/arch/arm64/configs/h3_defconfig
@@ -59,7 +59,6 @@ CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_GENERIC_IRQ_SHOW_LEVEL=y
 CONFIG_HARDIRQS_SW_RESEND=y
-CONFIG_GENERIC_IRQ_CHIP=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_MSI_IRQ=y
@@ -282,12 +281,11 @@ CONFIG_FREEZER=y
 #
 # Platform selection
 #
-CONFIG_ARCH_BCM_IPROC=y
-CONFIG_ARCH_BERLIN=y
-CONFIG_ARCH_EXYNOS=y
-CONFIG_ARCH_EXYNOS7=y
+# CONFIG_ARCH_BCM_IPROC is not set
+# CONFIG_ARCH_BERLIN is not set
+# CONFIG_ARCH_EXYNOS7 is not set
 # CONFIG_ARCH_FSL_LS2085A is not set
-CONFIG_ARCH_HISI=y
+# CONFIG_ARCH_HISI is not set
 # CONFIG_ARCH_MEDIATEK is not set
 # CONFIG_ARCH_QCOM is not set
 # CONFIG_ARCH_ROCKCHIP is not set
@@ -295,8 +293,7 @@ CONFIG_ARCH_HISI=y
 CONFIG_ARCH_SHMOBILE=y
 CONFIG_ARCH_RENESAS=y
 CONFIG_ARCH_R8A7795=y
-CONFIG_ARCH_TEGRA=y
-CONFIG_ARCH_TEGRA_132_SOC=y
+# CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_SPRD is not set
 # CONFIG_ARCH_THUNDER is not set
 # CONFIG_ARCH_VEXPRESS is not set
@@ -326,7 +323,6 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 # CONFIG_PCI_RCAR_GEN2 is not set
 CONFIG_PCI_RCAR_GEN2_PCIE=y
 # CONFIG_PCIE_IPROC is not set
-# CONFIG_PCIE_IPROC_PLATFORM is not set
 # CONFIG_PCIEPORTBUS is not set
 # CONFIG_HOTPLUG_PCI is not set
 
@@ -499,11 +495,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 CONFIG_CPUFREQ_DT=y
 # CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
-# CONFIG_ARM_HISI_ACPU_CPUFREQ is not set
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_ARM_RCAR_CPUFREQ=y
-CONFIG_ARM_TEGRA20_CPUFREQ=y
-CONFIG_ARM_TEGRA124_CPUFREQ=y
 CONFIG_NET=y
 
 #
@@ -626,10 +619,10 @@ CONFIG_UEVENT_HELPER=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
-CONFIG_STANDALONE=y
-CONFIG_PREVENT_FIRMWARE_BUILD=y
+# CONFIG_STANDALONE is not set
+# CONFIG_PREVENT_FIRMWARE_BUILD is not set
 CONFIG_FW_LOADER=y
-CONFIG_FIRMWARE_IN_KERNEL=y
+# CONFIG_FIRMWARE_IN_KERNEL is not set
 CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 CONFIG_ALLOW_DEV_COREDUMP=y
@@ -831,7 +824,6 @@ CONFIG_SATA_PMP=y
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
 # CONFIG_AHCI_CEVA is not set
-# CONFIG_AHCI_TEGRA is not set
 # CONFIG_AHCI_XGENE is not set
 # CONFIG_SATA_INIC162X is not set
 # CONFIG_SATA_ACARD_AHCI is not set
@@ -1109,7 +1101,6 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_MCS is not set
 # CONFIG_KEYBOARD_MPR121 is not set
 # CONFIG_KEYBOARD_NEWTON is not set
-# CONFIG_KEYBOARD_TEGRA is not set
 # CONFIG_KEYBOARD_OPENCORES is not set
 # CONFIG_KEYBOARD_SAMSUNG is not set
 # CONFIG_KEYBOARD_STOWAWAY is not set
@@ -1202,7 +1193,6 @@ CONFIG_SERIAL_8250_DW=y
 CONFIG_SERIAL_AMBA_PL011=y
 CONFIG_SERIAL_AMBA_PL011_CONSOLE=y
 # CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST is not set
-# CONFIG_SERIAL_SAMSUNG is not set
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_UARTLITE is not set
@@ -1219,8 +1209,7 @@ CONFIG_SERIAL_OF_PLATFORM=y
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
 # CONFIG_SERIAL_IFX6X60 is not set
-CONFIG_SERIAL_XILINX_PS_UART=y
-CONFIG_SERIAL_XILINX_PS_UART_CONSOLE=y
+# CONFIG_SERIAL_XILINX_PS_UART is not set
 # CONFIG_SERIAL_ARC is not set
 # CONFIG_SERIAL_RP2 is not set
 # CONFIG_SERIAL_FSL_LPUART is not set
@@ -1277,12 +1266,10 @@ CONFIG_I2C_ALGOBIT=y
 #
 # I2C system bus drivers (mostly embedded / system-on-chip)
 #
-# CONFIG_I2C_BCM_IPROC is not set
 # CONFIG_I2C_CBUS_GPIO is not set
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_DESIGNWARE_PCI is not set
 # CONFIG_I2C_EMEV2 is not set
-# CONFIG_I2C_EXYNOS5 is not set
 # CONFIG_I2C_GPIO is not set
 # CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
@@ -1292,7 +1279,6 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_RK3X is not set
 # CONFIG_I2C_SH_MOBILE is not set
 # CONFIG_I2C_SIMTEC is not set
-# CONFIG_I2C_TEGRA is not set
 # CONFIG_I2C_XILINX is not set
 CONFIG_I2C_RCAR=y
 
@@ -1332,12 +1318,10 @@ CONFIG_SPI_PL022=y
 # CONFIG_SPI_PXA2XX_PCI is not set
 # CONFIG_SPI_ROCKCHIP is not set
 # CONFIG_SPI_RSPI is not set
-# CONFIG_SPI_S3C64XX is not set
 # CONFIG_SPI_SC18IS602 is not set
 CONFIG_SPI_SH_MSIOF=y
 # CONFIG_SPI_SH_MSIOF_TRANSFER_SYNC_DEBUG is not set
 CONFIG_SPI_SH_HSPI=y
-# CONFIG_SPI_TEGRA20_SFLASH is not set
 # CONFIG_SPI_XCOMM is not set
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_ZYNQMP_GQSPI is not set
@@ -1388,16 +1372,10 @@ CONFIG_GENERIC_PINCONF=y
 # CONFIG_DEBUG_PINCTRL is not set
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_SINGLE is not set
-CONFIG_PINCTRL_TEGRA=y
-CONFIG_PINCTRL_TEGRA124=y
-CONFIG_PINCTRL_TEGRA_XUSB=y
-CONFIG_PINCTRL_SAMSUNG=y
-CONFIG_PINCTRL_EXYNOS=y
 CONFIG_PINCTRL_SH_PFC=y
 CONFIG_GPIO_SH_PFC=y
 CONFIG_PINCTRL_PFC_R8A7795=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
-CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIO_DEVRES=y
 CONFIG_OF_GPIO=y
@@ -1428,7 +1406,8 @@ CONFIG_GPIO_XGENE=y
 # CONFIG_GPIO_ADNP is not set
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
-# CONFIG_GPIO_PCA953X is not set
+CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_PCA953X_IRQ=y
 # CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_SX150X is not set
 
@@ -1483,7 +1462,6 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
-# CONFIG_POWER_RESET_HISI is not set
 # CONFIG_POWER_RESET_LTC2952 is not set
 # CONFIG_POWER_RESET_RESTART is not set
 CONFIG_POWER_RESET_VEXPRESS=y
@@ -1508,17 +1486,39 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_CLOCK_THERMAL is not set
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_RCAR_THERMAL=y
-# CONFIG_TEGRA_SOCTHERM is not set
 
 #
 # Texas Instruments thermal drivers
 #
+CONFIG_WATCHDOG=y
+CONFIG_WATCHDOG_CORE=y
+# CONFIG_WATCHDOG_NOWAYOUT is not set
 
 #
-# Samsung thermal drivers
+# Watchdog Device Drivers
 #
-# CONFIG_EXYNOS_THERMAL is not set
-# CONFIG_WATCHDOG is not set
+# CONFIG_SOFT_WATCHDOG is not set
+# CONFIG_GPIO_WATCHDOG is not set
+# CONFIG_XILINX_WATCHDOG is not set
+# CONFIG_ARM_SP805_WATCHDOG is not set
+# CONFIG_CADENCE_WATCHDOG is not set
+# CONFIG_DW_WATCHDOG is not set
+# CONFIG_MAX63XX_WATCHDOG is not set
+CONFIG_RENESAS_RWDT=y
+# CONFIG_ALIM7101_WDT is not set
+# CONFIG_I6300ESB_WDT is not set
+# CONFIG_MEN_A21_WDT is not set
+
+#
+# PCI-based Watchdog Cards
+#
+# CONFIG_PCIPCWATCHDOG is not set
+# CONFIG_WDTPCI is not set
+
+#
+# USB-based Watchdog Cards
+#
+# CONFIG_USBPCWATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
 #
@@ -1535,7 +1535,7 @@ CONFIG_BCMA_POSSIBLE=y
 #
 # Multifunction device drivers
 #
-CONFIG_MFD_CORE=y
+# CONFIG_MFD_CORE is not set
 # CONFIG_MFD_AS3711 is not set
 # CONFIG_MFD_AS3722 is not set
 # CONFIG_PMIC_ADP5520 is not set
@@ -1623,7 +1623,7 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_WM831X_SPI is not set
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_WM8994 is not set
-CONFIG_MFD_VEXPRESS_SYSREG=y
+# CONFIG_MFD_VEXPRESS_SYSREG is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
@@ -1696,14 +1696,9 @@ CONFIG_VIDEO_RCAR_VIN=y
 CONFIG_VIDEO_RCAR_CSI2=y
 # CONFIG_VIDEO_SH_MOBILE_CSI2 is not set
 # CONFIG_VIDEO_SH_MOBILE_CEU is not set
-# CONFIG_VIDEO_SAMSUNG_EXYNOS4_IS is not set
-# CONFIG_VIDEO_SAMSUNG_S5P_TV is not set
 # CONFIG_VIDEO_XILINX is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
-# CONFIG_VIDEO_SAMSUNG_S5P_G2D is not set
-# CONFIG_VIDEO_SAMSUNG_S5P_JPEG is not set
-# CONFIG_VIDEO_SAMSUNG_S5P_MFC is not set
 # CONFIG_VIDEO_SH_VEU is not set
 # CONFIG_VIDEO_RENESAS_JPU is not set
 CONFIG_VIDEO_RENESAS_VSP1=y
@@ -1880,7 +1875,6 @@ CONFIG_DVB_TUNER_DIB0090=m
 #
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
-# CONFIG_TEGRA_HOST1X is not set
 CONFIG_DRM=y
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_KMS_FB_HELPER=y
@@ -1917,7 +1911,6 @@ CONFIG_DRM_RCAR_VSP=y
 # CONFIG_DRM_QXL is not set
 # CONFIG_DRM_BOCHS is not set
 # CONFIG_DRM_VIRTIO_GPU is not set
-# CONFIG_DRM_TEGRA is not set
 CONFIG_DRM_BRIDGE=y
 
 #
@@ -1955,7 +1948,7 @@ CONFIG_FB_MODE_HELPERS=y
 #
 # CONFIG_FB_CIRRUS is not set
 # CONFIG_FB_PM2 is not set
-CONFIG_FB_ARMCLCD=y
+# CONFIG_FB_ARMCLCD is not set
 # CONFIG_FB_CYBER2000 is not set
 # CONFIG_FB_ASILIANT is not set
 # CONFIG_FB_IMSTT is not set
@@ -1981,7 +1974,6 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_PM3 is not set
 # CONFIG_FB_CARMINE is not set
 # CONFIG_FB_SH_MOBILE_LCDC is not set
-# CONFIG_FB_S3C is not set
 # CONFIG_FB_SMSCUFX is not set
 # CONFIG_FB_UDL is not set
 # CONFIG_FB_VIRTUAL is not set
@@ -1990,7 +1982,6 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_BROADSHEET is not set
 # CONFIG_FB_AUO_K190X is not set
 # CONFIG_FB_SIMPLE is not set
-# CONFIG_EXYNOS_VIDEO is not set
 # CONFIG_FB_SH_MOBILE_MERAM is not set
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
@@ -2109,7 +2100,6 @@ CONFIG_SND_PCI=y
 # HD-Audio
 #
 # CONFIG_SND_HDA_INTEL is not set
-# CONFIG_SND_HDA_TEGRA is not set
 CONFIG_SND_HDA_PREALLOC_SIZE=64
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
@@ -2140,7 +2130,6 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_SOC_FSL_SPDIF is not set
 # CONFIG_SND_SOC_FSL_ESAI is not set
 # CONFIG_SND_SOC_IMX_AUDMUX is not set
-# CONFIG_SND_SOC_SAMSUNG is not set
 
 #
 # SoC Audio support for SuperH
@@ -2344,8 +2333,6 @@ CONFIG_USB_EHCI_HCD=y
 # CONFIG_USB_EHCI_ROOT_HUB_TT is not set
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 CONFIG_USB_EHCI_PCI=y
-# CONFIG_USB_EHCI_TEGRA is not set
-# CONFIG_USB_EHCI_EXYNOS is not set
 CONFIG_USB_EHCI_HCD_PLATFORM=y
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
@@ -2355,7 +2342,6 @@ CONFIG_USB_EHCI_HCD_PLATFORM=y
 # CONFIG_USB_MAX3421_HCD is not set
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PCI=y
-# CONFIG_USB_OHCI_EXYNOS is not set
 CONFIG_USB_OHCI_HCD_PLATFORM=y
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
@@ -2401,8 +2387,22 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_MICROTEK is not set
 # CONFIG_USBIP_CORE is not set
 # CONFIG_USB_MUSB_HDRC is not set
-# CONFIG_USB_DWC3 is not set
-# CONFIG_USB_DWC2 is not set
+CONFIG_USB_DWC3=y
+CONFIG_USB_DWC3_HOST=y
+
+#
+# Platform Glue Driver Support
+#
+CONFIG_USB_DWC3_PCI=y
+CONFIG_USB_DWC2=y
+CONFIG_USB_DWC2_HOST=y
+
+#
+# Gadget/Dual-role mode requires USB Gadget support to be enabled
+#
+# CONFIG_USB_DWC2_PCI is not set
+# CONFIG_USB_DWC2_DEBUG is not set
+# CONFIG_USB_DWC2_TRACK_MISSED_SOFS is not set
 # CONFIG_USB_CHIPIDEA is not set
 # CONFIG_USB_ISP1760 is not set
 
@@ -2473,10 +2473,7 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 # CONFIG_MMC_SDHCI_OF_ARASAN is not set
 # CONFIG_MMC_SDHCI_OF_AT91 is not set
-# CONFIG_MMC_SDHCI_TEGRA is not set
-# CONFIG_MMC_SDHCI_PXAV3 is not set
 # CONFIG_MMC_SDHCI_F_SDH30 is not set
-# CONFIG_MMC_SDHCI_IPROC is not set
 # CONFIG_MMC_TIFM_SD is not set
 # CONFIG_MMC_SPI is not set
 CONFIG_MMC_TMIO_CORE=y
@@ -2634,11 +2631,8 @@ CONFIG_RTC_INTF_DEV=y
 #
 # on-CPU RTC drivers
 #
-CONFIG_HAVE_S3C_RTC=y
-# CONFIG_RTC_DRV_S3C is not set
 # CONFIG_RTC_DRV_PL030 is not set
 # CONFIG_RTC_DRV_PL031 is not set
-# CONFIG_RTC_DRV_TEGRA is not set
 # CONFIG_RTC_DRV_SNVS is not set
 
 #
@@ -2657,7 +2651,6 @@ CONFIG_DMA_OF=y
 # CONFIG_FSL_EDMA is not set
 # CONFIG_IDMA64 is not set
 # CONFIG_PL330_DMA is not set
-# CONFIG_TEGRA20_APB_DMA is not set
 # CONFIG_DW_DMAC is not set
 # CONFIG_DW_DMAC_PCI is not set
 # CONFIG_HSU_DMA_PCI is not set
@@ -2676,6 +2669,7 @@ CONFIG_RCAR_DMAC=y
 # CONFIG_DMATEST is not set
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
+# CONFIG_VFIO is not set
 # CONFIG_VIRT_DRIVERS is not set
 CONFIG_VIRTIO=y
 
@@ -2704,7 +2698,6 @@ CONFIG_STAGING=y
 #
 # CONFIG_SPEAKUP is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
-# CONFIG_MFD_NVEC is not set
 # CONFIG_STAGING_MEDIA is not set
 
 #
@@ -2738,8 +2731,6 @@ CONFIG_COMMON_CLK_CS2000_CP=y
 # CONFIG_COMMON_CLK_PWM is not set
 # CONFIG_COMMON_CLK_PXA is not set
 # CONFIG_COMMON_CLK_CDCE706 is not set
-# CONFIG_COMMON_CLK_IPROC is not set
-CONFIG_COMMON_CLK_SAMSUNG=y
 
 #
 # Hardware Spinlock drivers
@@ -2749,7 +2740,6 @@ CONFIG_COMMON_CLK_SAMSUNG=y
 # Clock Source drivers
 #
 CONFIG_CLKSRC_OF=y
-CONFIG_CLKSRC_MMIO=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_ARM_TIMER_SP804 is not set
@@ -2759,7 +2749,18 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_SH_TIMER_TMU is not set
 # CONFIG_EM_TIMER_STI is not set
 # CONFIG_MAILBOX is not set
-# CONFIG_IOMMU_SUPPORT is not set
+CONFIG_IOMMU_API=y
+CONFIG_IOMMU_SUPPORT=y
+
+#
+# Generic IOMMU Pagetable Support
+#
+CONFIG_IOMMU_IO_PGTABLE=y
+CONFIG_IOMMU_IO_PGTABLE_LPAE=y
+# CONFIG_IOMMU_IO_PGTABLE_LPAE_SELFTEST is not set
+CONFIG_OF_IOMMU=y
+CONFIG_ARM_SMMU=y
+CONFIG_ARM_SMMU_V3=y
 
 #
 # Remoteproc drivers
@@ -2788,16 +2789,12 @@ CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_PWM_RCAR=y
 # CONFIG_PWM_RENESAS_TPU is not set
-# CONFIG_PWM_SAMSUNG is not set
-# CONFIG_PWM_TEGRA is not set
 CONFIG_IRQCHIP=y
 CONFIG_ARM_GIC=y
 CONFIG_ARM_GIC_V2M=y
 CONFIG_ARM_GIC_V3=y
 CONFIG_ARM_GIC_V3_ITS=y
-CONFIG_DW_APB_ICTL=y
 # CONFIG_IPACK_BUS is not set
-CONFIG_ARCH_HAS_RESET_CONTROLLER=y
 CONFIG_RESET_CONTROLLER=y
 # CONFIG_FMC is not set
 
@@ -2805,15 +2802,15 @@ CONFIG_RESET_CONTROLLER=y
 # PHY Subsystem
 #
 CONFIG_GENERIC_PHY=y
-# CONFIG_PHY_BERLIN_USB is not set
-# CONFIG_PHY_BERLIN_SATA is not set
-CONFIG_PHY_EXYNOS_MIPI_VIDEO=y
 # CONFIG_PHY_PXA_28NM_HSIC is not set
 # CONFIG_PHY_PXA_28NM_USB2 is not set
 # CONFIG_PHY_RCAR_GEN2 is not set
 CONFIG_PHY_RCAR_GEN3_USB2=y
-CONFIG_PHY_EXYNOS_DP_VIDEO=y
 # CONFIG_BCM_KONA_USB2_PHY is not set
+CONFIG_PHY_SAMSUNG_USB2=y
+# CONFIG_PHY_EXYNOS4210_USB2 is not set
+# CONFIG_PHY_EXYNOS4X12_USB2 is not set
+# CONFIG_PHY_EXYNOS5250_USB2 is not set
 CONFIG_PHY_XGENE=y
 # CONFIG_POWERCAP is not set
 # CONFIG_MCB is not set
@@ -3317,7 +3314,6 @@ CONFIG_CRYPTO_JITTERENTROPY=m
 # CONFIG_CRYPTO_USER_API_RNG is not set
 # CONFIG_CRYPTO_USER_API_AEAD is not set
 CONFIG_CRYPTO_HW=y
-# CONFIG_CRYPTO_DEV_S5P is not set
 # CONFIG_CRYPTO_DEV_CCP is not set
 # CONFIG_ASYMMETRIC_KEY_TYPE is not set
 CONFIG_ARM64_CRYPTO=y
