h3_defconfig: add dmatest, remove unused drivers

--- a/arch/arm64/configs/h3_defconfig
+++ b/arch/arm64/configs/h3_defconfig
@@ -1464,8 +1464,8 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
 # CONFIG_POWER_RESET_LTC2952 is not set
 # CONFIG_POWER_RESET_RESTART is not set
-CONFIG_POWER_RESET_VEXPRESS=y
-CONFIG_POWER_RESET_XGENE=y
+# CONFIG_POWER_RESET_VEXPRESS is not set
+# CONFIG_POWER_RESET_XGENE is not set
 CONFIG_POWER_RESET_SYSCON=y
 # CONFIG_POWER_RESET_SYSCON_POWEROFF is not set
 # CONFIG_POWER_AVS is not set
@@ -2666,7 +2666,7 @@ CONFIG_RCAR_DMAC=y
 # DMA Clients
 #
 # CONFIG_ASYNC_TX_DMA is not set
-# CONFIG_DMATEST is not set
+CONFIG_DMATEST=m
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
 # CONFIG_VFIO is not set
@@ -2788,7 +2788,7 @@ CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_FSL_FTM is not set
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_PWM_RCAR=y
-# CONFIG_PWM_RENESAS_TPU is not set
+CONFIG_PWM_RENESAS_TPU=y
 CONFIG_IRQCHIP=y
 CONFIG_ARM_GIC=y
 CONFIG_ARM_GIC_V2M=y
