--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -2311,5 +2311,38 @@
 			power-domains = <&pd_always_on>;
 			status = "disabled";
 		};
+
+		/* RT-DMAC */
+		rtdmac: dma-controller@ffc10000 {
+			compatible = "renesas,rcar-dmac";
+			reg = <0 0xffc10000 0 0x10000>;
+			interrupts = <GIC_SPI 448 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 449 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 450 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 451 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 452 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 453 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 454 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 455 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 456 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 457 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 458 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 459 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 460 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 461 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 462 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 463 IRQ_TYPE_LEVEL_HIGH
+				      GIC_SPI 464 IRQ_TYPE_LEVEL_HIGH>;
+			interrupt-names = "error",
+					"ch0", "ch1", "ch2", "ch3",
+					"ch4", "ch5", "ch6", "ch7",
+					"ch8", "ch9", "ch10", "ch11",
+					"ch12", "ch13", "ch14", "ch15";
+			clocks = <&mstp0_clks R8A7795_CLK_RTDMAC>;
+			clock-names = "fck";
+			power-domains = <&pd_always_on>;
+			#dma-cells = <1>;
+			dma-channels = <16>;
+		};
 	};
 };
