--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -34,6 +34,7 @@
 /dts-v1/;
 #include "r8a7795.dtsi"
 #include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/input/input.h>
 
 / {
 	model = "Renesas Salvator-X board based on r8a7795";
@@ -89,6 +90,28 @@
 			compatible = "shared-dma-pool";
 			reusable;
 			reg = <0x00000000 0x70000000 0x0 0x10000000>;
+		};
+	};
+
+	gpiokeys {
+		compatible = "gpio-keys";
+
+		button@20 {
+			label = "SW20";
+			linux,code = <BTN_0>;
+			gpios = <&gpio6 11 GPIO_ACTIVE_LOW>;
+		};
+
+		button@21 {
+			label = "SW21";
+			linux,code = <BTN_1>;
+			gpios = <&gpio6 12 GPIO_ACTIVE_LOW>;
+		};
+
+		button@22 {
+			label = "SW22";
+			linux,code = <BTN_2>;
+			gpios = <&gpio6 13 GPIO_ACTIVE_LOW>;
 		};
 	};
 
