salvator-x.dts: updated clocks (needed?)

--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -461,7 +461,7 @@
 	};
 
 	sound_clk_pins: sound_clk {
-		renesas,groups = "audio_clkout3_a";
+		renesas,groups = "audio_clk_a_a", "audio_clk_b_a", "audio_clk_c_a", "audio_clkout_a", "audio_clkout3_a";
 		renesas,function = "audio_clk";
 	};
 };
