--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -503,8 +503,10 @@
 
 	rcar_sound,dai {
 		dai0 {
-			playback = <&ssi0 &src0 &dvc0>;
-			capture  = <&ssi1 &src1 &dvc1>;
+			//playback = <&ssi0 &src0 &dvc0>;
+			//capture  = <&ssi1 &src1 &dvc1>;
+			playback = <&ssi0>;
+			capture  = <&ssi1>;
 		};
 	};
 };
