--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -69,7 +69,8 @@
 
 	memory@700000000 {
 		device_type = "memory";
-		reg = <0x7 0x00000000 0x0 0x40000000>;
+		/* reduced for power-vr */
+		reg = <0x7 0x10000000 0x0 0x30000000>;
 	};
 
 	reserved-memory {
