salvator-x: msiof0_sync is audio clock not spi1
The msiof0_sync pin is connected to the AUDIO_CLKOUT signal to generate
the AUDIO_CLKB and EX_AUDIO_CLKB signals via a CS2000 clock generator.

So by default, limit spi0 to the MISO, MOSI and CLK lines.

Signed-off-by: Ben Dooks <ben.dooks@codethink.co.uk>

--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -412,7 +412,7 @@
 	};
 
 	msiof0_pins: spi1 {
-		renesas,groups = "msiof0_clk", "msiof0_sync",
+		renesas,groups = "msiof0_clk",
 				"msiof0_rxd",  "msiof0_txd";
 		renesas,function = "msiof0";
 	};
