dts/i: salv-x bootargs as per 'doboot' cmdline

--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -48,7 +48,12 @@
 	};
 
 	chosen {
+#if 0	/* standard */
 		bootargs = "console=ttySC0,115200 ignore_loglevel";
+#else
+		//bootargs = "console=ttySC0,115200 root=/dev/sda1 rootwait blanktime=0";
+		bootargs = "console=ttySC0,115200 root=/dev/sda1 rootwait consoleblank=0";
+#endif
 		stdout-path = &scif2;
 	};
 
