--- a/drivers/phy/Kconfig
+++ b/drivers/phy/Kconfig
@@ -120,7 +120,8 @@ config PHY_RCAR_GEN2
 
 config PHY_RCAR_GEN3_USB2
 	tristate "Renesas R-Car generation 3 USB 2.0 PHY driver"
-	depends on GENERIC_PHY
+	depends on OF && ARCH_SHMOBILE
+	select GENERIC_PHY
 	help
 	  Support for USB 2.0 PHY found on Renesas R-Car generation 3 SoCs.
 
