arm64: dts: r8a7795: usb2_phy device nodes
This patch merged Yoshihiro Shimoda's patch to add usb2_phy device nodes
at http://www.spinics.net/lists/linux-renesas-soc/msg00325.html

It does the following:

1. remove hsusb registers from usb2_phy0 node
2. remove no longer supported reg-names and clock-names properties in
all phy nodes.
3. added interrupte property for usb2_phy0 node

Signed-off-by: Kejia Hu <kejia.hu@codethink.co.uk>

--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -1260,11 +1260,9 @@
 
 		usb2_phy0: usb-phy@ee080200 {
 			compatible = "renesas,usb2-phy-r8a7795";
-			reg = <0 0xee080200 0 0x6ff>, <0 0xe6590100 0 0x100>;
-			reg-names = "usb2", "hsusb";
-			clocks = <&mstp7_clks R8A7795_CLK_EHCI0>,
-				 <&mstp7_clks R8A7795_CLK_HSUSB>;
-			clock-names = "usb2", "hsusb";
+			reg = <0 0xee080200 0 0x6ff>;
+			interrupts = <GIC_SPI 108 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&mstp7_clks R8A7795_CLK_EHCI0>;
 			power-domains = <&pd_always_on>;
 			#phy-cells = <0>;
 			status = "disabled";
@@ -1273,9 +1271,7 @@
 		usb2_phy1: usb-phy@ee0a0200 {
 			compatible = "renesas,usb2-phy-r8a7795";
 			reg = <0 0xee0a0200 0 0x6ff>;
-			reg-names = "usb2";
 			clocks = <&mstp7_clks R8A7795_CLK_EHCI1>;
-			clock-names = "usb2";
 			power-domains = <&pd_always_on>;
 			#phy-cells = <0>;
 			status = "disabled";
@@ -1284,9 +1280,7 @@
 		usb2_phy2: usb-phy@ee0c0200 {
 			compatible = "renesas,usb2-phy-r8a7795";
 			reg = <0 0xee0c0200 0 0x6ff>;
-			reg-names = "usb2";
 			clocks = <&mstp7_clks R8A7795_CLK_EHCI2>;
-			clock-names = "usb2";
 			power-domains = <&pd_always_on>;
 			#phy-cells = <0>;
 			status = "disabled";
