arm64: dts: r8a7795: add HS-USB device node
This patch is based on Yoshihiro Shimoda's patch to add HS-USB
device node at
http://www.spinics.net/lists/linux-renesas-soc/msg00326.html

But it made minor changes on the name of clocks and power-domains.

Signed-off-by: Kejia Hu <kejia.hu@codethink.co.uk>

--- a/arch/arm64/boot/dts/renesas/r8a7795.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795.dtsi
@@ -1258,6 +1258,19 @@
 			status = "disabled";
 		};
 
+		hsusb: usb@e6590000 {
+			compatible = "renesas,usbhs-r8a7795",
+				     "renesas,rcar-gen3-usbhs";
+			reg = <0 0xe6590000 0 0x100>;
+			interrupts = <0 107 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&mstp7_clks R8A7795_CLK_HSUSB>;
+			power-domains = <&cpg_clocks>;
+			renesas,buswait = <11>;
+			phys = <&usb2_phy0>;
+			phy-names = "usb";
+			status = "disabled";
+		};
+
 		usb2_phy0: usb-phy@ee080200 {
 			compatible = "renesas,usb2-phy-r8a7795";
 			reg = <0 0xee080200 0 0x6ff>;
