arm64: dts: salvator-x: add a regulator to be used to handle VBUS on/off for USB2.0 host channel 0.
This patch is based on Yoshihiro Shimoda's patch to enable usb2_phy
(http://www.spinics.net/lists/linux-renesas-soc/msg00327.html)

the current extcon/max3355 driver seems to have some issue with linux,
and we used a regulator driver instead of it to workaround.

This can be changed later.

Signed-off-by: Kejia Hu <kejia.hu@codethink.co.uk>

--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x.dts
@@ -362,6 +362,15 @@
 			sound-dai = <&ak4613>;
 		};
 	};
+
+	vcc_usb2_phy0: regulator@0 {
+		compatible = "regulator-fixed";
+		regulator-name = "USB20_VBUS0";
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+		gpio = <&gpio6 16 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
 };
 
 &extal_clk {
@@ -558,6 +567,7 @@
 
 &usb2_phy0 {
 	status = "okay";
+	phy-supply = <&vcc_usb2_phy0>;
 	pinctrl-0 = <&usb0_pins>;
 	pinctrl-names = "default";
 };
